config-root/namespaces/jx-staging/jx3-demo2/jx3-demo2-jx3-demo2-deploy.yaml
# Source: jx3-demo2/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jx3-demo2-jx3-demo2
  labels:
    draft: draft-app
    chart: "jx3-demo2-0.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'jx3-demo2'
    wave.pusher.com/update-on-config-change: 'true'
  namespace: jx-staging
spec:
  selector:
    matchLabels:
      app: jx3-demo2-jx3-demo2
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: jx3-demo2-jx3-demo2
    spec:
      serviceAccountName: jx3-demo2-jx3-demo2
      containers:
        - name: jx3-demo2
          image: "ghcr.io/dockerpac/jx3-demo2:0.0.1"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
        - name: "tekton-container-registry-auth"
