config-root/namespaces/jx-staging/jx3-demo2/jx3-demo2-ingress.yaml
# Source: jx3-demo2/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    meta.helm.sh/release-name: 'jx3-demo2'
  name: jx3-demo2
  namespace: jx-staging
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
    - http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: jx3-demo2
                port:
                  number: 80
      host: jx3-demo2-jx-staging.lenscicd.pac.dockerps.io
